# RPiCalc

./: CMakeLists.txt  ComputePi.cpp  ComputePi.hpp  Exec.txt  main.cpp
